# ClearWatch

./: .gitignore  Anchor.toml  LICENSE  README.md  clearwatch-poi-skill.md  demo.sh  package.json  skills-lock.json
docs/: pitch.md  tech-walkthrough.md
examples/: check-only-devnet.mjs
programs/clearwatch/: Cargo.toml
programs/clearwatch/src/: error.rs  instructions.rs  lib.rs  state.rs
programs/clearwatch/src/instructions/: check_and_prove.rs  check_only.rs  report_address.rs  slash_reporter.rs  upgrade_tier.rs
programs/clearwatch/tests/: test_clearwatch.rs
